update API to add payment Get - closes #42

--- a/Webpage/templates/admin/rent_roll.html
+++ b/Webpage/templates/admin/rent_roll.html
@@ -190,7 +190,10 @@
                                 newCell2.title = statuses.message
 
                                 if (statuses.paymentID) {
+                                    let newa = document.createElement("a")
                                     newCell2.setAttribute('onclick', `showPayment(${statuses.paymentID})`)
+                                    newa.appendChild(newCell2)
+                                    newCell2 = newa
                                 }
                                 newRow.appendChild(newCell2);
                             }
